--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,32 @@
 
-scikit-learn
-matplotlib
+Flask==1.1.2
+joblib==1.0.1
+keras==2.6.0
+matplotlib==3.3.4
+numpy==1.21.2
+pandas==1.3.3
+requests==2.25.1
+scikit_learn==1.0.2
+seaborn==0.11.1
+xgboost==1.5.1
+utils==1.0.1
+jellyfish==0.8.9
+langdetect==1.0.9
+nltk==3.6.1
+spacy==3.2.0
+textblob==0.17.1
+vaderSentiment==3.3.2
+ipython==7.30.1
+gapminder==0.1
+mlxtend==0.19.0
+networkx==2.5
+squarify==0.4.3
+pandas-profiling==3.1.0
+plotly==5.3.1
+scikit_image==0.18.1
+scipy==1.7.1
+nbformat
+squarify==0.4.3
+gapminder==0.1
+tensorflow==2.7
+ipywidgets
